Fixed overflow

--- a/core.css
+++ b/core.css
@@ -18,7 +18,7 @@ nav { background-color: rgba(0, 150, 0, 1); }
 .container-trippel { max-width: 220px; display: inline-block; margin:25px}
 .p-trippel {text-align: center; color: white; }
 
-.desc-img { max-width: 100vw; max-height: 100vh; }
+.desc-img { max-width: 100%; }
 
 @media screen and (max-width: 1000px)
 {
